Compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CHAR

Grammar

Rule 0     S' -> programa
Rule 1     programa -> MAIN LBRACE lista_decl lista_sent RBRACE
Rule 2     lista_decl -> lista_decl decl
Rule 3     lista_decl -> empty
Rule 4     decl -> tipo lista_id SEMICOLON
Rule 5     tipo -> INT
Rule 6     tipo -> FLOAT
Rule 7     tipo -> BOOL
Rule 8     lista_id -> lista_id COMMA ID
Rule 9     lista_id -> ID
Rule 10    lista_sent -> lista_sent sent
Rule 11    lista_sent -> empty
Rule 12    sent -> sent_if
Rule 13    sent -> sent_while
Rule 14    sent -> sent_do
Rule 15    sent -> sent_read
Rule 16    sent -> sent_write
Rule 17    sent -> bloque
Rule 18    sent -> sent_assign
Rule 19    sent -> BREAK SEMICOLON
Rule 20    sent_if -> IF LPAREN exp_bool RPAREN THEN bloque ELSE bloque FI SEMICOLON
Rule 21    sent_if -> IF LPAREN exp_bool RPAREN THEN bloque FI SEMICOLON
Rule 22    sent_while -> WHILE LPAREN exp_bool RPAREN bloque
Rule 23    sent_do -> DO bloque UNTIL LPAREN exp_bool RPAREN SEMICOLON
Rule 24    sent_read -> READ ID SEMICOLON
Rule 25    sent_write -> WRITE exp_bool SEMICOLON
Rule 26    bloque -> LBRACE lista_sent RBRACE
Rule 27    sent_assign -> ID EQUALS exp_bool SEMICOLON
Rule 28    exp_bool -> exp_bool OR comb
Rule 29    exp_bool -> comb
Rule 30    comb -> comb AND igualdad
Rule 31    comb -> igualdad
Rule 32    igualdad -> igualdad EQ rel
Rule 33    igualdad -> igualdad NE rel
Rule 34    igualdad -> rel
Rule 35    rel -> expr op_rel expr
Rule 36    rel -> expr
Rule 37    op_rel -> LT
Rule 38    op_rel -> LE
Rule 39    op_rel -> GT
Rule 40    op_rel -> GE
Rule 41    expr -> expr PLUS term
Rule 42    expr -> expr MINUS term
Rule 43    expr -> term
Rule 44    term -> term TIMES unario
Rule 45    term -> term DIVIDE unario
Rule 46    term -> unario
Rule 47    unario -> NOT unario
Rule 48    unario -> MINUS unario
Rule 49    unario -> factor
Rule 50    factor -> NUMBER
Rule 51    factor -> ID
Rule 52    factor -> LPAREN exp_bool RPAREN
Rule 53    factor -> TRUE
Rule 54    factor -> FALSE
Rule 55    empty -> <empty>

Terminals, with rules where they appear

AND                  : 30
BOOL                 : 7
BREAK                : 19
CHAR                 : 
COMMA                : 8
DIVIDE               : 45
DO                   : 23
ELSE                 : 20
EQ                   : 32
EQUALS               : 27
FALSE                : 54
FI                   : 20 21
FLOAT                : 6
GE                   : 40
GT                   : 39
ID                   : 8 9 24 27 51
IF                   : 20 21
INT                  : 5
LBRACE               : 1 26
LE                   : 38
LPAREN               : 20 21 22 23 52
LT                   : 37
MAIN                 : 1
MINUS                : 42 48
NE                   : 33
NOT                  : 47
NUMBER               : 50
OR                   : 28
PLUS                 : 41
RBRACE               : 1 26
READ                 : 24
RPAREN               : 20 21 22 23 52
SEMICOLON            : 4 19 20 21 23 24 25 27
THEN                 : 20 21
TIMES                : 44
TRUE                 : 53
UNTIL                : 23
WHILE                : 22
WRITE                : 25
error                : 

Nonterminals, with rules where they appear

bloque               : 17 20 20 21 22 23
comb                 : 28 29 30
decl                 : 2
empty                : 3 11
exp_bool             : 20 21 22 23 25 27 28 52
expr                 : 35 35 36 41 42
factor               : 49
igualdad             : 30 31 32 33
lista_decl           : 1 2
lista_id             : 4 8
lista_sent           : 1 10 26
op_rel               : 35
programa             : 0
rel                  : 32 33 34
sent                 : 10
sent_assign          : 18
sent_do              : 14
sent_if              : 12
sent_read            : 15
sent_while           : 13
sent_write           : 16
term                 : 41 42 43 44 45
tipo                 : 4
unario               : 44 45 46 47 48

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . MAIN LBRACE lista_decl lista_sent RBRACE

    MAIN            shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> MAIN . LBRACE lista_decl lista_sent RBRACE

    LBRACE          shift and go to state 3


state 3

    (1) programa -> MAIN LBRACE . lista_decl lista_sent RBRACE
    (2) lista_decl -> . lista_decl decl
    (3) lista_decl -> . empty
    (55) empty -> .

    INT             reduce using rule 55 (empty -> .)
    FLOAT           reduce using rule 55 (empty -> .)
    BOOL            reduce using rule 55 (empty -> .)
    RBRACE          reduce using rule 55 (empty -> .)
    BREAK           reduce using rule 55 (empty -> .)
    IF              reduce using rule 55 (empty -> .)
    WHILE           reduce using rule 55 (empty -> .)
    DO              reduce using rule 55 (empty -> .)
    READ            reduce using rule 55 (empty -> .)
    WRITE           reduce using rule 55 (empty -> .)
    LBRACE          reduce using rule 55 (empty -> .)
    ID              reduce using rule 55 (empty -> .)

    lista_decl                     shift and go to state 4
    empty                          shift and go to state 5

state 4

    (1) programa -> MAIN LBRACE lista_decl . lista_sent RBRACE
    (2) lista_decl -> lista_decl . decl
    (10) lista_sent -> . lista_sent sent
    (11) lista_sent -> . empty
    (4) decl -> . tipo lista_id SEMICOLON
    (55) empty -> .
    (5) tipo -> . INT
    (6) tipo -> . FLOAT
    (7) tipo -> . BOOL

    RBRACE          reduce using rule 55 (empty -> .)
    BREAK           reduce using rule 55 (empty -> .)
    IF              reduce using rule 55 (empty -> .)
    WHILE           reduce using rule 55 (empty -> .)
    DO              reduce using rule 55 (empty -> .)
    READ            reduce using rule 55 (empty -> .)
    WRITE           reduce using rule 55 (empty -> .)
    LBRACE          reduce using rule 55 (empty -> .)
    ID              reduce using rule 55 (empty -> .)
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    BOOL            shift and go to state 12

    lista_sent                     shift and go to state 6
    decl                           shift and go to state 7
    empty                          shift and go to state 8
    tipo                           shift and go to state 9

state 5

    (3) lista_decl -> empty .

    INT             reduce using rule 3 (lista_decl -> empty .)
    FLOAT           reduce using rule 3 (lista_decl -> empty .)
    BOOL            reduce using rule 3 (lista_decl -> empty .)
    RBRACE          reduce using rule 3 (lista_decl -> empty .)
    BREAK           reduce using rule 3 (lista_decl -> empty .)
    IF              reduce using rule 3 (lista_decl -> empty .)
    WHILE           reduce using rule 3 (lista_decl -> empty .)
    DO              reduce using rule 3 (lista_decl -> empty .)
    READ            reduce using rule 3 (lista_decl -> empty .)
    WRITE           reduce using rule 3 (lista_decl -> empty .)
    LBRACE          reduce using rule 3 (lista_decl -> empty .)
    ID              reduce using rule 3 (lista_decl -> empty .)


state 6

    (1) programa -> MAIN LBRACE lista_decl lista_sent . RBRACE
    (10) lista_sent -> lista_sent . sent
    (12) sent -> . sent_if
    (13) sent -> . sent_while
    (14) sent -> . sent_do
    (15) sent -> . sent_read
    (16) sent -> . sent_write
    (17) sent -> . bloque
    (18) sent -> . sent_assign
    (19) sent -> . BREAK SEMICOLON
    (20) sent_if -> . IF LPAREN exp_bool RPAREN THEN bloque ELSE bloque FI SEMICOLON
    (21) sent_if -> . IF LPAREN exp_bool RPAREN THEN bloque FI SEMICOLON
    (22) sent_while -> . WHILE LPAREN exp_bool RPAREN bloque
    (23) sent_do -> . DO bloque UNTIL LPAREN exp_bool RPAREN SEMICOLON
    (24) sent_read -> . READ ID SEMICOLON
    (25) sent_write -> . WRITE exp_bool SEMICOLON
    (26) bloque -> . LBRACE lista_sent RBRACE
    (27) sent_assign -> . ID EQUALS exp_bool SEMICOLON

    RBRACE          shift and go to state 14
    BREAK           shift and go to state 23
    IF              shift and go to state 24
    WHILE           shift and go to state 25
    DO              shift and go to state 26
    READ            shift and go to state 27
    WRITE           shift and go to state 29
    LBRACE          shift and go to state 13
    ID              shift and go to state 28

    sent                           shift and go to state 15
    sent_if                        shift and go to state 16
    sent_while                     shift and go to state 17
    sent_do                        shift and go to state 18
    sent_read                      shift and go to state 19
    sent_write                     shift and go to state 20
    bloque                         shift and go to state 21
    sent_assign                    shift and go to state 22

state 7

    (2) lista_decl -> lista_decl decl .

    INT             reduce using rule 2 (lista_decl -> lista_decl decl .)
    FLOAT           reduce using rule 2 (lista_decl -> lista_decl decl .)
    BOOL            reduce using rule 2 (lista_decl -> lista_decl decl .)
    RBRACE          reduce using rule 2 (lista_decl -> lista_decl decl .)
    BREAK           reduce using rule 2 (lista_decl -> lista_decl decl .)
    IF              reduce using rule 2 (lista_decl -> lista_decl decl .)
    WHILE           reduce using rule 2 (lista_decl -> lista_decl decl .)
    DO              reduce using rule 2 (lista_decl -> lista_decl decl .)
    READ            reduce using rule 2 (lista_decl -> lista_decl decl .)
    WRITE           reduce using rule 2 (lista_decl -> lista_decl decl .)
    LBRACE          reduce using rule 2 (lista_decl -> lista_decl decl .)
    ID              reduce using rule 2 (lista_decl -> lista_decl decl .)


state 8

    (11) lista_sent -> empty .

    RBRACE          reduce using rule 11 (lista_sent -> empty .)
    BREAK           reduce using rule 11 (lista_sent -> empty .)
    IF              reduce using rule 11 (lista_sent -> empty .)
    WHILE           reduce using rule 11 (lista_sent -> empty .)
    DO              reduce using rule 11 (lista_sent -> empty .)
    READ            reduce using rule 11 (lista_sent -> empty .)
    WRITE           reduce using rule 11 (lista_sent -> empty .)
    LBRACE          reduce using rule 11 (lista_sent -> empty .)
    ID              reduce using rule 11 (lista_sent -> empty .)


state 9

    (4) decl -> tipo . lista_id SEMICOLON
    (8) lista_id -> . lista_id COMMA ID
    (9) lista_id -> . ID

    ID              shift and go to state 31

    lista_id                       shift and go to state 30

state 10

    (5) tipo -> INT .

    ID              reduce using rule 5 (tipo -> INT .)


state 11

    (6) tipo -> FLOAT .

    ID              reduce using rule 6 (tipo -> FLOAT .)


state 12

    (7) tipo -> BOOL .

    ID              reduce using rule 7 (tipo -> BOOL .)


state 13

    (26) bloque -> LBRACE . lista_sent RBRACE
    (10) lista_sent -> . lista_sent sent
    (11) lista_sent -> . empty
    (55) empty -> .

    RBRACE          reduce using rule 55 (empty -> .)
    BREAK           reduce using rule 55 (empty -> .)
    IF              reduce using rule 55 (empty -> .)
    WHILE           reduce using rule 55 (empty -> .)
    DO              reduce using rule 55 (empty -> .)
    READ            reduce using rule 55 (empty -> .)
    WRITE           reduce using rule 55 (empty -> .)
    LBRACE          reduce using rule 55 (empty -> .)
    ID              reduce using rule 55 (empty -> .)

    lista_sent                     shift and go to state 32
    empty                          shift and go to state 8

state 14

    (1) programa -> MAIN LBRACE lista_decl lista_sent RBRACE .

    $end            reduce using rule 1 (programa -> MAIN LBRACE lista_decl lista_sent RBRACE .)


state 15

    (10) lista_sent -> lista_sent sent .

    RBRACE          reduce using rule 10 (lista_sent -> lista_sent sent .)
    BREAK           reduce using rule 10 (lista_sent -> lista_sent sent .)
    IF              reduce using rule 10 (lista_sent -> lista_sent sent .)
    WHILE           reduce using rule 10 (lista_sent -> lista_sent sent .)
    DO              reduce using rule 10 (lista_sent -> lista_sent sent .)
    READ            reduce using rule 10 (lista_sent -> lista_sent sent .)
    WRITE           reduce using rule 10 (lista_sent -> lista_sent sent .)
    LBRACE          reduce using rule 10 (lista_sent -> lista_sent sent .)
    ID              reduce using rule 10 (lista_sent -> lista_sent sent .)


state 16

    (12) sent -> sent_if .

    RBRACE          reduce using rule 12 (sent -> sent_if .)
    BREAK           reduce using rule 12 (sent -> sent_if .)
    IF              reduce using rule 12 (sent -> sent_if .)
    WHILE           reduce using rule 12 (sent -> sent_if .)
    DO              reduce using rule 12 (sent -> sent_if .)
    READ            reduce using rule 12 (sent -> sent_if .)
    WRITE           reduce using rule 12 (sent -> sent_if .)
    LBRACE          reduce using rule 12 (sent -> sent_if .)
    ID              reduce using rule 12 (sent -> sent_if .)


state 17

    (13) sent -> sent_while .

    RBRACE          reduce using rule 13 (sent -> sent_while .)
    BREAK           reduce using rule 13 (sent -> sent_while .)
    IF              reduce using rule 13 (sent -> sent_while .)
    WHILE           reduce using rule 13 (sent -> sent_while .)
    DO              reduce using rule 13 (sent -> sent_while .)
    READ            reduce using rule 13 (sent -> sent_while .)
    WRITE           reduce using rule 13 (sent -> sent_while .)
    LBRACE          reduce using rule 13 (sent -> sent_while .)
    ID              reduce using rule 13 (sent -> sent_while .)


state 18

    (14) sent -> sent_do .

    RBRACE          reduce using rule 14 (sent -> sent_do .)
    BREAK           reduce using rule 14 (sent -> sent_do .)
    IF              reduce using rule 14 (sent -> sent_do .)
    WHILE           reduce using rule 14 (sent -> sent_do .)
    DO              reduce using rule 14 (sent -> sent_do .)
    READ            reduce using rule 14 (sent -> sent_do .)
    WRITE           reduce using rule 14 (sent -> sent_do .)
    LBRACE          reduce using rule 14 (sent -> sent_do .)
    ID              reduce using rule 14 (sent -> sent_do .)


state 19

    (15) sent -> sent_read .

    RBRACE          reduce using rule 15 (sent -> sent_read .)
    BREAK           reduce using rule 15 (sent -> sent_read .)
    IF              reduce using rule 15 (sent -> sent_read .)
    WHILE           reduce using rule 15 (sent -> sent_read .)
    DO              reduce using rule 15 (sent -> sent_read .)
    READ            reduce using rule 15 (sent -> sent_read .)
    WRITE           reduce using rule 15 (sent -> sent_read .)
    LBRACE          reduce using rule 15 (sent -> sent_read .)
    ID              reduce using rule 15 (sent -> sent_read .)


state 20

    (16) sent -> sent_write .

    RBRACE          reduce using rule 16 (sent -> sent_write .)
    BREAK           reduce using rule 16 (sent -> sent_write .)
    IF              reduce using rule 16 (sent -> sent_write .)
    WHILE           reduce using rule 16 (sent -> sent_write .)
    DO              reduce using rule 16 (sent -> sent_write .)
    READ            reduce using rule 16 (sent -> sent_write .)
    WRITE           reduce using rule 16 (sent -> sent_write .)
    LBRACE          reduce using rule 16 (sent -> sent_write .)
    ID              reduce using rule 16 (sent -> sent_write .)


state 21

    (17) sent -> bloque .

    RBRACE          reduce using rule 17 (sent -> bloque .)
    BREAK           reduce using rule 17 (sent -> bloque .)
    IF              reduce using rule 17 (sent -> bloque .)
    WHILE           reduce using rule 17 (sent -> bloque .)
    DO              reduce using rule 17 (sent -> bloque .)
    READ            reduce using rule 17 (sent -> bloque .)
    WRITE           reduce using rule 17 (sent -> bloque .)
    LBRACE          reduce using rule 17 (sent -> bloque .)
    ID              reduce using rule 17 (sent -> bloque .)


state 22

    (18) sent -> sent_assign .

    RBRACE          reduce using rule 18 (sent -> sent_assign .)
    BREAK           reduce using rule 18 (sent -> sent_assign .)
    IF              reduce using rule 18 (sent -> sent_assign .)
    WHILE           reduce using rule 18 (sent -> sent_assign .)
    DO              reduce using rule 18 (sent -> sent_assign .)
    READ            reduce using rule 18 (sent -> sent_assign .)
    WRITE           reduce using rule 18 (sent -> sent_assign .)
    LBRACE          reduce using rule 18 (sent -> sent_assign .)
    ID              reduce using rule 18 (sent -> sent_assign .)


state 23

    (19) sent -> BREAK . SEMICOLON

    SEMICOLON       shift and go to state 33


state 24

    (20) sent_if -> IF . LPAREN exp_bool RPAREN THEN bloque ELSE bloque FI SEMICOLON
    (21) sent_if -> IF . LPAREN exp_bool RPAREN THEN bloque FI SEMICOLON

    LPAREN          shift and go to state 34


state 25

    (22) sent_while -> WHILE . LPAREN exp_bool RPAREN bloque

    LPAREN          shift and go to state 35


state 26

    (23) sent_do -> DO . bloque UNTIL LPAREN exp_bool RPAREN SEMICOLON
    (26) bloque -> . LBRACE lista_sent RBRACE

    LBRACE          shift and go to state 13

    bloque                         shift and go to state 36

state 27

    (24) sent_read -> READ . ID SEMICOLON

    ID              shift and go to state 37


state 28

    (27) sent_assign -> ID . EQUALS exp_bool SEMICOLON

    EQUALS          shift and go to state 38


state 29

    (25) sent_write -> WRITE . exp_bool SEMICOLON
    (28) exp_bool -> . exp_bool OR comb
    (29) exp_bool -> . comb
    (30) comb -> . comb AND igualdad
    (31) comb -> . igualdad
    (32) igualdad -> . igualdad EQ rel
    (33) igualdad -> . igualdad NE rel
    (34) igualdad -> . rel
    (35) rel -> . expr op_rel expr
    (36) rel -> . expr
    (41) expr -> . expr PLUS term
    (42) expr -> . expr MINUS term
    (43) expr -> . term
    (44) term -> . term TIMES unario
    (45) term -> . term DIVIDE unario
    (46) term -> . unario
    (47) unario -> . NOT unario
    (48) unario -> . MINUS unario
    (49) unario -> . factor
    (50) factor -> . NUMBER
    (51) factor -> . ID
    (52) factor -> . LPAREN exp_bool RPAREN
    (53) factor -> . TRUE
    (54) factor -> . FALSE

    NOT             shift and go to state 47
    MINUS           shift and go to state 45
    NUMBER          shift and go to state 49
    ID              shift and go to state 50
    LPAREN          shift and go to state 51
    TRUE            shift and go to state 52
    FALSE           shift and go to state 53

    exp_bool                       shift and go to state 39
    comb                           shift and go to state 40
    igualdad                       shift and go to state 41
    rel                            shift and go to state 42
    expr                           shift and go to state 43
    term                           shift and go to state 44
    unario                         shift and go to state 46
    factor                         shift and go to state 48

state 30

    (4) decl -> tipo lista_id . SEMICOLON
    (8) lista_id -> lista_id . COMMA ID

    SEMICOLON       shift and go to state 54
    COMMA           shift and go to state 55


state 31

    (9) lista_id -> ID .

    SEMICOLON       reduce using rule 9 (lista_id -> ID .)
    COMMA           reduce using rule 9 (lista_id -> ID .)


state 32

    (26) bloque -> LBRACE lista_sent . RBRACE
    (10) lista_sent -> lista_sent . sent
    (12) sent -> . sent_if
    (13) sent -> . sent_while
    (14) sent -> . sent_do
    (15) sent -> . sent_read
    (16) sent -> . sent_write
    (17) sent -> . bloque
    (18) sent -> . sent_assign
    (19) sent -> . BREAK SEMICOLON
    (20) sent_if -> . IF LPAREN exp_bool RPAREN THEN bloque ELSE bloque FI SEMICOLON
    (21) sent_if -> . IF LPAREN exp_bool RPAREN THEN bloque FI SEMICOLON
    (22) sent_while -> . WHILE LPAREN exp_bool RPAREN bloque
    (23) sent_do -> . DO bloque UNTIL LPAREN exp_bool RPAREN SEMICOLON
    (24) sent_read -> . READ ID SEMICOLON
    (25) sent_write -> . WRITE exp_bool SEMICOLON
    (26) bloque -> . LBRACE lista_sent RBRACE
    (27) sent_assign -> . ID EQUALS exp_bool SEMICOLON

    RBRACE          shift and go to state 56
    BREAK           shift and go to state 23
    IF              shift and go to state 24
    WHILE           shift and go to state 25
    DO              shift and go to state 26
    READ            shift and go to state 27
    WRITE           shift and go to state 29
    LBRACE          shift and go to state 13
    ID              shift and go to state 28

    sent                           shift and go to state 15
    sent_if                        shift and go to state 16
    sent_while                     shift and go to state 17
    sent_do                        shift and go to state 18
    sent_read                      shift and go to state 19
    sent_write                     shift and go to state 20
    bloque                         shift and go to state 21
    sent_assign                    shift and go to state 22

state 33

    (19) sent -> BREAK SEMICOLON .

    RBRACE          reduce using rule 19 (sent -> BREAK SEMICOLON .)
    BREAK           reduce using rule 19 (sent -> BREAK SEMICOLON .)
    IF              reduce using rule 19 (sent -> BREAK SEMICOLON .)
    WHILE           reduce using rule 19 (sent -> BREAK SEMICOLON .)
    DO              reduce using rule 19 (sent -> BREAK SEMICOLON .)
    READ            reduce using rule 19 (sent -> BREAK SEMICOLON .)
    WRITE           reduce using rule 19 (sent -> BREAK SEMICOLON .)
    LBRACE          reduce using rule 19 (sent -> BREAK SEMICOLON .)
    ID              reduce using rule 19 (sent -> BREAK SEMICOLON .)


state 34

    (20) sent_if -> IF LPAREN . exp_bool RPAREN THEN bloque ELSE bloque FI SEMICOLON
    (21) sent_if -> IF LPAREN . exp_bool RPAREN THEN bloque FI SEMICOLON
    (28) exp_bool -> . exp_bool OR comb
    (29) exp_bool -> . comb
    (30) comb -> . comb AND igualdad
    (31) comb -> . igualdad
    (32) igualdad -> . igualdad EQ rel
    (33) igualdad -> . igualdad NE rel
    (34) igualdad -> . rel
    (35) rel -> . expr op_rel expr
    (36) rel -> . expr
    (41) expr -> . expr PLUS term
    (42) expr -> . expr MINUS term
    (43) expr -> . term
    (44) term -> . term TIMES unario
    (45) term -> . term DIVIDE unario
    (46) term -> . unario
    (47) unario -> . NOT unario
    (48) unario -> . MINUS unario
    (49) unario -> . factor
    (50) factor -> . NUMBER
    (51) factor -> . ID
    (52) factor -> . LPAREN exp_bool RPAREN
    (53) factor -> . TRUE
    (54) factor -> . FALSE

    NOT             shift and go to state 47
    MINUS           shift and go to state 45
    NUMBER          shift and go to state 49
    ID              shift and go to state 50
    LPAREN          shift and go to state 51
    TRUE            shift and go to state 52
    FALSE           shift and go to state 53

    exp_bool                       shift and go to state 57
    comb                           shift and go to state 40
    igualdad                       shift and go to state 41
    rel                            shift and go to state 42
    expr                           shift and go to state 43
    term                           shift and go to state 44
    unario                         shift and go to state 46
    factor                         shift and go to state 48

state 35

    (22) sent_while -> WHILE LPAREN . exp_bool RPAREN bloque
    (28) exp_bool -> . exp_bool OR comb
    (29) exp_bool -> . comb
    (30) comb -> . comb AND igualdad
    (31) comb -> . igualdad
    (32) igualdad -> . igualdad EQ rel
    (33) igualdad -> . igualdad NE rel
    (34) igualdad -> . rel
    (35) rel -> . expr op_rel expr
    (36) rel -> . expr
    (41) expr -> . expr PLUS term
    (42) expr -> . expr MINUS term
    (43) expr -> . term
    (44) term -> . term TIMES unario
    (45) term -> . term DIVIDE unario
    (46) term -> . unario
    (47) unario -> . NOT unario
    (48) unario -> . MINUS unario
    (49) unario -> . factor
    (50) factor -> . NUMBER
    (51) factor -> . ID
    (52) factor -> . LPAREN exp_bool RPAREN
    (53) factor -> . TRUE
    (54) factor -> . FALSE

    NOT             shift and go to state 47
    MINUS           shift and go to state 45
    NUMBER          shift and go to state 49
    ID              shift and go to state 50
    LPAREN          shift and go to state 51
    TRUE            shift and go to state 52
    FALSE           shift and go to state 53

    exp_bool                       shift and go to state 58
    comb                           shift and go to state 40
    igualdad                       shift and go to state 41
    rel                            shift and go to state 42
    expr                           shift and go to state 43
    term                           shift and go to state 44
    unario                         shift and go to state 46
    factor                         shift and go to state 48

state 36

    (23) sent_do -> DO bloque . UNTIL LPAREN exp_bool RPAREN SEMICOLON

    UNTIL           shift and go to state 59


state 37

    (24) sent_read -> READ ID . SEMICOLON

    SEMICOLON       shift and go to state 60


state 38

    (27) sent_assign -> ID EQUALS . exp_bool SEMICOLON
    (28) exp_bool -> . exp_bool OR comb
    (29) exp_bool -> . comb
    (30) comb -> . comb AND igualdad
    (31) comb -> . igualdad
    (32) igualdad -> . igualdad EQ rel
    (33) igualdad -> . igualdad NE rel
    (34) igualdad -> . rel
    (35) rel -> . expr op_rel expr
    (36) rel -> . expr
    (41) expr -> . expr PLUS term
    (42) expr -> . expr MINUS term
    (43) expr -> . term
    (44) term -> . term TIMES unario
    (45) term -> . term DIVIDE unario
    (46) term -> . unario
    (47) unario -> . NOT unario
    (48) unario -> . MINUS unario
    (49) unario -> . factor
    (50) factor -> . NUMBER
    (51) factor -> . ID
    (52) factor -> . LPAREN exp_bool RPAREN
    (53) factor -> . TRUE
    (54) factor -> . FALSE

    NOT             shift and go to state 47
    MINUS           shift and go to state 45
    NUMBER          shift and go to state 49
    ID              shift and go to state 50
    LPAREN          shift and go to state 51
    TRUE            shift and go to state 52
    FALSE           shift and go to state 53

    exp_bool                       shift and go to state 61
    comb                           shift and go to state 40
    igualdad                       shift and go to state 41
    rel                            shift and go to state 42
    expr                           shift and go to state 43
    term                           shift and go to state 44
    unario                         shift and go to state 46
    factor                         shift and go to state 48

state 39

    (25) sent_write -> WRITE exp_bool . SEMICOLON
    (28) exp_bool -> exp_bool . OR comb

    SEMICOLON       shift and go to state 62
    OR              shift and go to state 63


state 40

    (29) exp_bool -> comb .
    (30) comb -> comb . AND igualdad

    SEMICOLON       reduce using rule 29 (exp_bool -> comb .)
    OR              reduce using rule 29 (exp_bool -> comb .)
    RPAREN          reduce using rule 29 (exp_bool -> comb .)
    AND             shift and go to state 64


state 41

    (31) comb -> igualdad .
    (32) igualdad -> igualdad . EQ rel
    (33) igualdad -> igualdad . NE rel

    AND             reduce using rule 31 (comb -> igualdad .)
    SEMICOLON       reduce using rule 31 (comb -> igualdad .)
    OR              reduce using rule 31 (comb -> igualdad .)
    RPAREN          reduce using rule 31 (comb -> igualdad .)
    EQ              shift and go to state 65
    NE              shift and go to state 66


state 42

    (34) igualdad -> rel .

    EQ              reduce using rule 34 (igualdad -> rel .)
    NE              reduce using rule 34 (igualdad -> rel .)
    AND             reduce using rule 34 (igualdad -> rel .)
    SEMICOLON       reduce using rule 34 (igualdad -> rel .)
    OR              reduce using rule 34 (igualdad -> rel .)
    RPAREN          reduce using rule 34 (igualdad -> rel .)


state 43

    (35) rel -> expr . op_rel expr
    (36) rel -> expr .
    (41) expr -> expr . PLUS term
    (42) expr -> expr . MINUS term
    (37) op_rel -> . LT
    (38) op_rel -> . LE
    (39) op_rel -> . GT
    (40) op_rel -> . GE
